feat(doc): adding references

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -127,7 +127,7 @@ Having studied the already working platforms for investments, we found strengths
 
 \begin{itemize}
     \item Developing an efficient mobile application for investment management.
-    \item Increasing the level of users' engagement with recommendations using the power of AI \cite{MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024}.
+    \item Increasing the level of users' engagement with recommendations using the power of AI \cite{MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024, SmilkovTensorFlowJS2019}.
     \item Ensuring responsive and user-friendly interaction with the interface.
     \item Gaining the trust of investors by ensuring transparency and security in the investing platform.
     \item Enhancing the security of data and following all the financial regulations.
@@ -146,7 +146,7 @@ The \textbf{\textcolor{primary}{Korpor}} platform will be offering the following
 
 \section{Development methodology}
 
-The completion of the project on its delivery date is the main problem of every software development team. One of the most common problems encountered in the production of software is insufficient technical specifications, poor time management in the face of the use of emerging technology, and sudden changes in needs. In order to avoid these critical issues, we follow an agile methodology for project management.
+The completion of the project on its delivery date is the main problem of every software development team. One of the most common problems encountered in the production of software is insufficient technical specifications, poor time management in the face of the use of emerging technology, and sudden changes in needs. In order to avoid these critical issues, we follow an agile methodology for project management, using tools like Git \cite{GitWebsite} for version control and GitHub \cite{GithubWebsite} for collaborative development.
 
 \subsection{SCRUM}
 
