--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,7 +1,7 @@
 \chapter{Implementation}
 
 \section{Introduction}
-This chapter details the implementation phase of our project, which follows an agile methodology with four sprints. Each sprint focuses on delivering specific features and functionality according to the project backlog.
+This chapter details the implementation phase of our project, which follows an agile methodology with four sprints. Each sprint focuses on delivering specific features and functionality according to the project backlog. The implementation utilizes a modern tech stack consisting of React \cite{ReactWebsite} with Vite \cite{ViteJSWebsite} for the frontend, Node.js \cite{NodeJSWebsite} with Express.js \cite{ExpressJSWebsite} for the backend, MySQL \cite{MySQLWebsite} for database management, and Tailwind CSS \cite{TailwindWebsite} for styling.
 
 \section{Sprint 1: Authentication and User Management}
 \subsection{Overview}
@@ -55,7 +55,7 @@ The key deliverables for Sprint 1 include:
 
 \subsubsection{AI Property Evaluation System}
 \begin{itemize}
-    \item AI model development for rent price prediction
+    \item AI model development for rent price prediction using TensorFlow.js \cite{SmilkovTensorFlowJS2019}
     \item Property sale value estimation algorithm
     \item Data collection and preprocessing pipeline for real estate information
     \item Training environment setup for prediction models
@@ -65,15 +65,15 @@ The key deliverables for Sprint 1 include:
 
 \subsubsection{DevOps Infrastructure}
 \begin{itemize}
-    \item CI/CD pipeline configuration on GitHub for backend services
+    \item CI/CD pipeline configuration on GitHub \cite{GithubWebsite} for backend services
     \item GCP Cloud Run integration for containerized deployment
     \item Automated testing and deployment workflow
     \item Initial Docker setup for application components:
         \begin{itemize}
-            \item Frontend container configuration
+            \item Frontend container configuration with React \cite{ReactWebsite} and Vite \cite{ViteJSWebsite}
             \item Mobile application build environment
             \item Web application container
-            \item Backend API services container
+            \item Backend API services container using Express.js \cite{ExpressJSWebsite} and Node.js \cite{NodeJSWebsite}
             \item Nginx configuration for routing and load balancing
             \item AI services containerization
         \end{itemize}
