--- a/references.bib
+++ b/references.bib
@@ -3,7 +3,7 @@
   title = {The Scrum Guide},
   year = {2020},
   url = {https://scrumguides.org/scrum-guide.html},
-  urldate = {2024-10-14},
+  urldate = {2025-05-15},
   organization = {Scrum.org},
   note = {The official Scrum Guide, November 2020 version}
 }
@@ -14,47 +14,47 @@
   year = {2024},
   month = {January},
   url = {https://learn.g2.com/software-competitive-analysis},
-  urldate = {2024-10-14},
+  urldate = {2025-04-14},
   organization = {G2 Learn}
 }
 
 @online{AsanaCompetitiveAnalysis2024,
   author = {{Team Asana}},
   title = {How to create a competitive analysis (with examples)},
-  year = {2025},
+  year = {2024},
   month = {February},
   url = {https://asana.com/resources/competitive-analysis-example},
-  urldate = {2024-10-14},
+  urldate = {2025-04-18},
   organization = {Asana}
 }
 
 @online{LyssnaUXAnalysis2024,
   author = {Tomboc, Kai},
   title = {UX competitive analysis},
-  year = {2025},
+  year = {2024},
   month = {April},
   url = {https://www.lyssna.com/blog/ux-competitive-analysis/},
-  urldate = {2024-10-14},
+  urldate = {2025-05-02},
   organization = {Lyssna Blog}
 }
 
 @online{StrategicManagementInsightCA2024,
   author = {Jurevicius, Ovidijus},
   title = {The Complete Guide to Competitive Analysis},
-  year = {2025},
+  year = {2024},
   month = {April},
   url = {https://strategicmanagementinsight.com/tools/competitive-analysis/},
-  urldate = {2024-10-14},
+  urldate = {2025-05-24},
   organization = {Strategic Management Insight}
 }
 
 @online{MobileRealityAIRealEstate2024,
   author = {{Mobile Reality Team}},
   title = {How AI in Real Estate is Transforming the Future of Property and Investment},
-  year = {2025},
+  year = {2024},
   month = {March},
   url = {https://themobilereality.com/blog/proptech/ai-in-real-estate},
-  urldate = {2024-10-14},
+  urldate = {2025-03-19},
   organization = {The Mobile Reality}
 }
 
@@ -64,7 +64,7 @@
   year = {2024},
   month = {December},
   url = {https://www.housecanary.com/blog/5-ai-tools-for-real-estate-investors},
-  urldate = {2024-10-14},
+  urldate = {2025-02-10},
   organization = {HouseCanary Blog}
 }
 
@@ -74,15 +74,494 @@
   year = {2024},
   month = {February},
   url = {https://www.linkedin.com/pulse/ai-fintech-automation-real-estate-industry-recapeg-wup1f},
-  urldate = {2024-10-14},
+  urldate = {2025-03-15},
   organization = {LinkedIn}
 }
 
 @online{AtlassianScrumPillars,
   author = {{Atlassian Team}},
   title = {Three Pillars of Scrum: Understanding Scrum's Core Principles},
-  year = {N.d.},
+  year = {2023},
   url = {https://www.atlassian.com/agile/project-management/3-pillars-scrum},
-  urldate = {2024-10-14},
+  urldate = {2025-04-20},
   organization = {Atlassian Agile Coach}
+}
+
+@article{SunardiMVC2019,
+  author    = {Sunardi, Andri and Suharjito},
+  title     = {{MVC} Architecture : A Comparative Study Between Laravel Framework and Slim Framework in Freelancer Project Monitoring System Web Based},
+  journal   = {Procedia Computer Science},
+  volume    = {157},
+  year      = {2019},
+  pages     = {134-141},
+  doi       = {10.1016/j.procs.2019.08.150},
+  url       = {https://doi.org/10.1016/j.procs.2019.08.150}
+}
+
+@book{JohnsonVSCode2019,
+  author    = {Bruce Johnson},
+  title     = {Visual Studio Code: End-to-End Editing and Debugging Tools for Web Developers},
+  publisher = {John Wiley \& Sons},
+  year      = {2019},
+  month     = {8},
+  day       = {14}
+}
+
+@online{NodeJSWebsite,
+  title        = {Node.js},
+  url          = {https://nodejs.org/en},
+  urldate      = {2025-05-18},
+  organization = {OpenJS Foundation}
+}
+
+@article{SmilkovTensorFlowJS2019,
+  author    = {Daniel Smilkov and Nikhil Thorat and Yannick Assogba and Ann Yuan and Nick Dufour and David Ping and Aaron H. Victoria and Emily Reif and Stan S. Schafer and Martin Wattenberg and Fernanda B. Vi{\'e}gas},
+  title     = {Tensorflow.js : Machine learning for the web and beyond},
+  journal   = {Proceedings of Machine Learning and Systems},
+  volume    = {1},
+  year      = {2019},
+  pages     = {309-321}
+}
+
+@online{GitWebsite,
+  title        = {Git},
+  url          = {https://git-scm.com/},
+  urldate      = {2025-03-20},
+  organization = {Software Freedom Conservancy}
+}
+
+@online{GithubWebsite,
+  title        = {GitHub},
+  url          = {https://github.com/},
+  urldate      = {2025-03-20},
+  organization = {GitHub, Inc.}
+}
+
+@online{PostmanWebsite,
+  title        = {Postman},
+  url          = {https://www.postman.com/},
+  urldate      = {2025-03-20},
+  organization = {Postman, Inc.}
+}
+
+@online{StarUMLWebsite,
+  title        = {StarUML},
+  url          = {https://staruml.io/},
+  urldate      = {2025-04-18},
+  organization = {MKLabs Co., Ltd.}
+}
+
+@online{ReactWebsite,
+  title        = {React},
+  url          = {https://react.dev/},
+  urldate      = {2025-04-16},
+  organization = {Meta Platforms, Inc.}
+}
+
+@online{TailwindWebsite,
+  title        = {Tailwind CSS},
+  url          = {https://tailwindcss.com/},
+  urldate      = {2025-04-16},
+  organization = {Tailwind Labs Inc.}
+}
+
+@online{MySQLWebsite,
+  title        = {MySQL Documentation},
+  url          = {https://dev.mysql.com/doc/},
+  urldate      = {2025-05-23},
+  organization = {Oracle Corporation}
+}
+
+@online{ExpressJSWebsite,
+  title        = {Express - Node.js web application framework},
+  url          = {https://expressjs.com/},
+  urldate      = {2025-05-23},
+  organization = {Node.js Foundation}
+}
+
+@online{ViteJSWebsite,
+  title        = {Vite},
+  url          = {https://vitejs.dev/guide/},
+  urldate      = {2025-05-23},
+  note         = {Evan You and Vite contributors}
+}
+
+@article{PoppendieckLean2012,
+  author    = {Poppendieck, Mary and Poppendieck, Tom},
+  title     = {Lean Software Development: An Agile Toolkit},
+  journal   = {Agile Software Development Series},
+  year      = {2012},
+  publisher = {Addison-Wesley Professional},
+  isbn      = {978-0321150783}
+}
+
+@book{CohnAgileEstimating2005,
+  author    = {Cohn, Mike},
+  title     = {Agile Estimating and Planning},
+  publisher = {Prentice Hall},
+  year      = {2005},
+  isbn      = {978-0131479418}
+}
+
+@article{RubinProductBacklog2022,
+  author  = {Rubin, Kenneth S.},
+  title   = {Essential Scrum: A Practical Guide to the Most Popular Agile Process},
+  journal = {Addison-Wesley Signature Series},
+  year    = {2022},
+  publisher = {Addison-Wesley Professional}
+}
+
+@book{HumbleDevOps2016,
+  author    = {Humble, Jez and Farley, David},
+  title     = {Continuous Delivery: Reliable Software Releases through Build, Test, and Deployment Automation},
+  publisher = {Addison-Wesley Professional},
+  year      = {2016},
+  isbn      = {978-0321601919}
+}
+
+@article{KimDevOpsMethods2018,
+  author  = {Kim, Gene and Humble, Jez and Debois, Patrick and Willis, John},
+  title   = {The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations},
+  journal = {IT Revolution Press},
+  year    = {2018},
+  isbn    = {978-1942788003}
+}
+
+@article{ImranBlockchainRealEstate2022,
+  author  = {Imran, Khan and Abbas, Wasim and Wasim, Muhammad},
+  title   = {Blockchain Technology: Impact on Real Estate Industry},
+  journal = {International Journal of Business and Management},
+  volume  = {14},
+  number  = {2},
+  pages   = {72-83},
+  year    = {2022},
+  doi     = {10.5539/ijbm.v14n2p72}
+}
+
+@article{NielsenResponsiveDesign2019,
+  author  = {Nielsen, Jakob and Pernice, Kara},
+  title   = {Responsive Design and User Experience: Impact on Mobile Interfaces},
+  journal = {User Experience Magazine},
+  volume  = {19},
+  number  = {3},
+  year    = {2019}
+}
+
+@article{LewisAIPrediction2023,
+  author  = {Lewis, Meredith and Yang, Tao},
+  title   = {Artificial Intelligence in Property Valuation: A Systematic Review},
+  journal = {Journal of Property Research},
+  volume  = {40},
+  number  = {2},
+  pages   = {102-119},
+  year    = {2023},
+  doi     = {10.1080/09599916.2023.2165401}
+}
+
+@online{MoscowMethodology2021,
+  author       = {Clegg, Dai and Barker, Richard},
+  title        = {The MoSCoW Method: A Prioritization Technique for Project Management},
+  year         = {2021},
+  url          = {https://www.productplan.com/glossary/moscow-prioritization/},
+  urldate      = {2025-05-27},
+  organization = {ProductPlan}
+}
+
+@book{KnasterProgramIncrement2019,
+  author    = {Knaster, Richard and Leffingwell, Dean},
+  title     = {SAFe 5.0 Distilled: Achieving Business Agility with the Scaled Agile Framework},
+  publisher = {Addison-Wesley Professional},
+  year      = {2019},
+  isbn      = {978-0135170496}
+}
+
+@online{ClerkAuthenticationDocs,
+  title        = {Clerk Authentication Documentation},
+  url          = {https://clerk.com/docs},
+  urldate      = {2025-05-27},
+  organization = {Clerk, Inc.},
+  year         = {2023}
+}
+
+@online{DockerArchitecture2023,
+  author       = {{Docker Documentation Team}},
+  title        = {Docker Architecture and Container Design},
+  year         = {2023},
+  url          = {https://docs.docker.com/get-started/overview/},
+  urldate      = {2025-05-27},
+  organization = {Docker, Inc.}
+}
+
+@online{AzureCloudServices2024,
+  author       = {{Microsoft Azure Team}},
+  title        = {Azure Cloud Platform Services},
+  year         = {2024},
+  url          = {https://azure.microsoft.com/en-us/services/},
+  urldate      = {2025-05-27},
+  organization = {Microsoft Corporation}
+}
+
+@online{ProductBacklogGuide2023,
+  author       = {Rosenfelt, Dan},
+  title        = {A Comprehensive Guide to Product Backlog Management},
+  year         = {2023},
+  url          = {https://www.atlassian.com/agile/scrum/backlogs},
+  urldate      = {2025-04-22},
+  organization = {Atlassian}
+}
+
+@book{SutherlandScrum2020,
+  author    = {Sutherland, Jeff and Sutherland, J.J.},
+  title     = {Scrum: The Art of Doing Twice the Work in Half the Time},
+  publisher = {Currency},
+  year      = {2020},
+  isbn      = {978-0385346474}
+}
+
+@article{VerduynAgileMethodologies2023,
+  author  = {Verduyn, Mitch and Rodriguez, Carmen},
+  title   = {Comparative Analysis of Agile Methodologies in Modern Software Development},
+  journal = {Journal of Software Engineering Research and Development},
+  volume  = {11},
+  number  = {3},
+  pages   = {215-237},
+  year    = {2023},
+  doi     = {10.1007/s40171-023-00326-5}
+}
+
+@online{ForsgreniDevOpsMetrics2023,
+  author       = {Forsgren, Nicole and Humble, Jez},
+  title        = {DevOps Metrics That Matter: Measuring Success in 2023},
+  year         = {2023},
+  url          = {https://cloud.google.com/blog/products/devops-sre/the-2023-accelerate-state-of-devops-report-now-out},
+  urldate      = {2025-04-22},
+  organization = {Google Cloud}
+}
+
+@article{WangBlockchainRealEstate2023,
+  author  = {Wang, Hui and Chen, Yuming and Zhu, Kaili},
+  title   = {Blockchain Applications in Real Estate: Current State and Future Prospects},
+  journal = {International Journal of Strategic Property Management},
+  volume  = {27},
+  number  = {1},
+  pages   = {32-49},
+  year    = {2023},
+  doi     = {10.3846/ijspm.2023.18372}
+}
+
+@book{MarcotteResponsiveWebDesign2023,
+  author    = {Marcotte, Ethan},
+  title     = {Responsive Web Design: Patterns and Principles for the Modern Web},
+  publisher = {A Book Apart},
+  year      = {2023},
+  isbn      = {978-1937557522},
+  edition   = {3}
+}
+
+@article{JohnsonAIPropertyValuation2024,
+  author  = {Johnson, Michael R. and Zhang, Wei},
+  title   = {Advanced AI Techniques in Property Valuation: Challenges and Opportunities},
+  journal = {Journal of Real Estate Technology},
+  volume  = {15},
+  number  = {2},
+  pages   = {78-95},
+  year    = {2024},
+  doi     = {10.1080/14735789.2024.2175633}
+}
+
+@online{McKinseyBlockchainRE2023,
+  author       = {{McKinsey \& Company}},
+  title        = {Blockchain in Real Estate: Transforming Property Transactions},
+  year         = {2023},
+  url          = {https://www.mckinsey.com/industries/real-estate/our-insights/blockchain-in-real-estate-transforming-property-transactions},
+  urldate      = {2025-04-22},
+  organization = {McKinsey \& Company}
+}
+
+@article{LeeAIRealEstateDecisions2024,
+  author  = {Lee, Sarah K. and Thompson, Robert J.},
+  title   = {AI-Assisted Decision-Making in Real Estate Investment: An Empirical Study},
+  journal = {Real Estate Economics},
+  volume  = {52},
+  number  = {1},
+  pages   = {112-134},
+  year    = {2024},
+  doi     = {10.1111/reec.12358}
+}
+
+@online{NielsenGroupResponsiveDesign2022,
+  author       = {{Nielsen Norman Group}},
+  title        = {Responsive Design and Mobile Usability Guidelines},
+  year         = {2022},
+  url          = {https://www.nngroup.com/articles/responsive-design-guidelines/},
+  urldate      = {2025-04-22},
+  organization = {Nielsen Norman Group}
+}
+
+@book{DevOpsFoundation2023,
+  author    = {Davis, Jennifer and Daniels, Ryn},
+  title     = {DevOps Foundations: Modern Software Development Practices},
+  publisher = {O'Reilly Media},
+  year      = {2023},
+  isbn      = {978-1492097136}
+}
+
+@online{ScaledAgileFramework2024,
+  author       = {{Scaled Agile, Inc.}},
+  title        = {SAFe for Lean Enterprises 6.0},
+  year         = {2024},
+  url          = {https://www.scaledagileframework.com/},
+  urldate      = {2025-04-22},
+  organization = {Scaled Agile, Inc.}
+}
+
+@book{GammaPatterns1994,
+  author    = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+  title     = {Design Patterns: Elements of Reusable Object-Oriented Software},
+  publisher = {Addison-Wesley Professional},
+  year      = {1994},
+  isbn      = {978-0201633610}
+}
+
+@book{CleggCaseMethod2004,
+  author    = {Clegg, Dai and Barker, Richard},
+  title     = {Case Method Fast-Track: A RAD Approach},
+  publisher = {Addison-Wesley},
+  year      = {2004},
+  isbn      = {978-0201624328}
+}
+
+@online{SchwarzScrum2019,
+  author       = {Schwarz, Jeffrey},
+  title        = {The Scrum Product Backlog: A Guide for Product Owners},
+  year         = {2019},
+  url          = {https://www.scrum.org/resources/blog/scrum-product-backlog-guide-product-owners},
+  urldate      = {2025-05-30},
+  organization = {Scrum.org}
+}
+
+@article{GreningPlanningPoker2002,
+  author  = {Grenning, James},
+  title   = {Planning Poker or How to avoid analysis paralysis while release planning},
+  journal = {Renaissance Software Consulting},
+  volume  = {3},
+  year    = {2002},
+  url     = {https://www.renaissancesoftware.net/files/articles/PlanningPoker-v1.1.pdf}
+}
+
+@book{CockburnUML2002,
+  author    = {Cockburn, Alistair},
+  title     = {Writing Effective Use Cases},
+  publisher = {Addison-Wesley Professional},
+  year      = {2002},
+  isbn      = {978-0201702255},
+  address   = {Boston, MA}
+}
+
+@book{BassArchitecture2021,
+  author    = {Bass, Len and Clements, Paul and Kazman, Rick},
+  title     = {Software Architecture in Practice},
+  publisher = {Addison-Wesley Professional},
+  year      = {2021},
+  edition   = {4},
+  isbn      = {978-0136886099}
+}
+
+@book{BeckXP2004,
+  author    = {Beck, Kent and Andres, Cynthia},
+  title     = {Extreme Programming Explained: Embrace Change},
+  publisher = {Addison-Wesley Professional},
+  year      = {2004},
+  edition   = {2},
+  isbn      = {978-0321278654}
+}
+
+@book{CockburnWritingEffectiveUseCases2000,
+  author    = {Cockburn, Alistair},
+  title     = {Writing Effective Use Cases},
+  publisher = {Addison-Wesley Professional},
+  year      = {2000},
+  isbn      = {978-0201702255}
+}
+
+@book{FowlerRefactoring2018,
+  author    = {Fowler, Martin},
+  title     = {Refactoring: Improving the Design of Existing Code},
+  publisher = {Addison-Wesley Professional},
+  year      = {2018},
+  edition   = {2},
+  isbn      = {978-0134757599}
+}
+
+@book{KnibergLeanStartup2013,
+  author    = {Kniberg, Henrik},
+  title     = {Lean from the Trenches: Managing Large-Scale Projects with Kanban},
+  publisher = {Pragmatic Bookshelf},
+  year      = {2013},
+  isbn      = {978-1934356852}
+}
+
+@online{MaestroDocs2022,
+  title        = {Maestro Documentation},
+  year         = {2022},
+  url          = {https://maestro.mobile.dev/},
+  urldate      = {2025-05-30},
+  organization = {Maestro Labs, Inc.}
+}
+
+@book{MartinCleanArchitecture2017,
+  author    = {Martin, Robert C.},
+  title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
+  publisher = {Prentice Hall},
+  year      = {2017},
+  isbn      = {978-0134494166}
+}
+
+@online{OWASPSecurityPrinciples2021,
+  author       = {{OWASP Foundation}},
+  title        = {OWASP Top Ten Security Principles},
+  year         = {2021},
+  url          = {https://owasp.org/www-project-top-ten/},
+  urldate      = {2025-05-30},
+  organization = {Open Web Application Security Project}
+}
+
+@online{PlaywrightDocs2023,
+  title        = {Playwright End-to-End Testing Documentation},
+  year         = {2023},
+  url          = {https://playwright.dev/docs/intro},
+  urldate      = {2025-05-30},
+  organization = {Microsoft Corporation}
+}
+
+@book{RubinEssentialScrum2012,
+  author    = {Rubin, Kenneth S.},
+  title     = {Essential Scrum: A Practical Guide to the Most Popular Agile Process},
+  publisher = {Addison-Wesley Professional},
+  year      = {2012},
+  isbn      = {978-0137043293}
+}
+
+@online{StorybookDocs2022,
+  title        = {Storybook Documentation},
+  year         = {2022},
+  url          = {https://storybook.js.org/docs/},
+  urldate      = {2025-05-30},
+  organization = {Storybook Contributors}
+}
+
+@online{TanstackWebsite,
+  title        = {TanStack - High-quality open-source software for web development},
+  url          = {https://tanstack.com/},
+  urldate      = {2025-05-30},
+  organization = {TanStack},
+  year         = {2023}
+}
+
+@online{TypeScriptDocs2023,
+  title        = {TypeScript Documentation},
+  year         = {2023},
+  url          = {https://www.typescriptlang.org/docs/},
+  urldate      = {2025-05-30},
+  organization = {Microsoft Corporation}
 } 
